@@ -70,7 +70,7 @@ extern FILE *g_fs_uae_sync_debug_file;
 #define ARCADIA
 #define AUTOCONFIG
 
-#if !defined(WINDOWS) && !defined(ANDROID)
+#if !defined(WINDOWS) && !defined(ANDROID) && !defined(__LSB_VERSION__)
 #define BSDSOCKET
 #endif
 
